--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,22 @@ img{
   gap: 5px;
 }
 
+
+/* responsive */
+
+@media screen and (max-width: 576px){
+  .row{
+    flex-direction: column;
+    height: auto;
+  }
+  .square{
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .row{
+    flex-direction: column;
+    height: auto;
+  }
+}
